# fred2_description

./: CMakeLists.txt  README.md  package.xml
launch/: basic_urdf_shape.launch.py  display.launch.py  display_basic_shape.launch.py  robot_state_publisher_basic.launch..py  robot_state_publisher_basic.launch.py  robot_state_publisher_rviz.launch.py  robot_state_publisher_simulation.launch.py
log/: latest_list
rviz/: urdf.rviz
src/description/: fred_basic_shape.urdf  fred_description.urdf  fred_simplificated.urdf
